--- a/Smart Dial H1/.env
+++ b/Smart Dial H1/.env
@@ -1,1 +1,5 @@
 JWT_SECRET=your-secret-key
+
+MONGO_URI = mongodb+srv://salehsami017:Shena017@cluster0.e4tzz9w.mongodb.net/?retryWrites=true&w=majority
+
+#       mongodb+srv://admin:hassan@cluster0.vowocd1.mongodb.net/customer?retryWrites=true&w=majority
